# flaco.cli

./: .aider.chat.history.md  .gitignore  CHANGELOG.md  ITERATIVE-RELEASE-PLAN.md  LICENSE  LICENSE.aider  MAINTAINER_GUIDE.template.md  NOTICE  PRICING.md  QUICKSTART.md  README.md  RELEASE_NOTES_v2.0.0.md  ROADMAP-v2.0.0.md  RUN-FLACO.md  SEE-YOUR-CHANGES.md  START-HERE.md  STRIPE_SETUP_GUIDE.md  V3_IMPLEMENTATION_PLAN.md  refresh-install.sh  run-flaco.sh
flacoai/: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  report.md  requirements.txt
flacoai/aider/: __init__.py  activity_tracker.py  analytics.py  args.py  args_formatter.py  branding.py  commands.py  copypaste.py  deprecated.py  exceptions.py  gui.py  help.py  io.py  llm.py  main.py  models.py  onboarding.py  repo.py  repomap.py  report.py  report_generator.py  scrape.py  versioncheck.py  voice.py  watch.py
flacoai/benchmark/: Dockerfile  README.md  benchmark.py  clone-exercism.sh  cpp-test.sh  docker.sh  docker_build.sh  install-docker-ubuntu.sh  npm-test.sh  over_time.py  plot.sh  problem_stats.py  rsync.sh  swe-bench-lite.txt  swe-bench.txt  test_benchmark.py
flacoai/docker/: Dockerfile
flacoai/flacoai/: __init__.py  analytics.py  args.py  args_formatter.py  baseline_manager.py  branding.py  commands.py  editor.py  exceptions.py  fix_applicator.py  gui.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  onboarding.py  openrouter.py  project_memory.py  reasoning_tags.py  repo.py  repomap.py  report.py  report_generator.py  scrape.py  sendchat.py  smart_context.py  template_engine.py  urls.py  utils.py  (+4 more)
(+130 files in other folders)
